# reusable-workflows

./: .gitignore  .pre-commit-config.yml  .prettierignore  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  repo-hygiene.yml  reusable-codeql.yml  reusable-node.yml  reusable-python.yml  reusable-repo-hygiene.yml  selftest.yml  tooling-lint.yml
configs/node/: eslint.config.js  lintstaged.config.cjs  tsconfig.base.json
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  COMMIT_HOOKS.md  DESIGN_NOTES.md  README.md  SECURITY_MODEL.md  STACK.md  STRUCTURE.md  WORKFLOWS.md
docs/adr/: 0001-record-architecture-decisions.md  README.md
examples/node/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/node/src/: App.tsx  util.test.ts
examples/python/: pyproject.toml  requirements-dev.txt  requirements.txt
examples/python-pyproject/: README.md  pyproject.toml
examples/python/tests/: test_health.py
scaffolds/: README.md  codeql-js-ts.yml  codeql-python.yml  repo-hygiene.yml
scaffolds/node/: .gitignore  ci.yml
scaffolds/python/: .gitignore  ci.yml  dependabot.yml
scaffolds/repo/: .gitignore  CODEOWNERS
scripts/: apply.ps1  apply.sh  check-node.sh  check-python.sh  selfcheck.sh
