[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reusable-workflows-python-pyproject-example"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.1,<1.0",
  "httpx>=0.28.1,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.15.12,<1.0",
  "mypy>=1.20.2,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM"]
ignore = ["E501","B008"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"